# Spider

./: README.md
Spider/: .gitignore  CMakeLists.txt  CppProperties.json  Spider-client.sln
Spider/Client/: CMakeLists.txt  Client.cpp  Client.hpp  ConfigManager.cpp  ConfigManager.hpp  CurrentServer.cpp  CurrentServer.hpp  Executable.cpp  Executable.hpp  FileManager.cpp  FileManager.hpp  FileManagerException.hpp  Keylogger.cpp  Keylogger.hpp  KeyloggerException.hpp  NetworkException.cpp  OfflineManager.cpp  OfflineManager.hpp  PacketLogger.cpp  PacketLogger.hpp  ProgException.cpp  ProgException.hpp  main.cpp
Spider/Client/Exception/: FileManagerException.cpp  KeyloggerException.cpp  NetworkException.hpp
Spider/Common/: AData.hpp  Command.hpp  ContainerDevice.hpp  Header.hpp  LogInput.hpp  LogMouse.hpp  PacketFactory.cpp  PacketFactory.hpp  Print.cpp  Queue.hpp  Serialization.hpp  UsingClass.hpp
Spider/Server/: .gitignore  CMakeLists.txt  SpiderClient.cpp  SpiderClient.hpp  SpiderNetwork.cpp  SpiderNetwork.hpp  SpiderServer.cpp  SpiderServer.hpp  main.cpp
Spider/Server/Boost/: Accept.cpp  Accept.hpp  Connection.cpp  Connection.hpp
Spider/Server/Database/: ADatabase.hpp  MongoConnector.cpp  MongoConnector.hpp  Test.cpp  Test.hpp
Spider/Tests/: .gitignore  CMakeLists.txt
Spider/Tests/common_tests/: CMakeLists.txt  SerializationTest.cpp  SerializationTest.hpp  TestEnvironment.cpp  TestEnvironment.hpp
Spider/Tests/server_tests/: CMakeLists.txt  ServerTest.cpp  ServerTest.hpp  main.cpp
doc/: RFC_SPIDER.docx
